EllipsedTooltip - fix text overflow issues (#681)
* EllipsedTooltip - fix overflow issues

* EllipsedTooltip - allow passing a `style` prop

* EllipsedTooltip - update props

--- a/packages/wix-ui-core/src/hocs/EllipsedTooltip/EllipsedTooltip.st.css
+++ b/packages/wix-ui-core/src/hocs/EllipsedTooltip/EllipsedTooltip.st.css
@@ -6,4 +6,9 @@
 .root {
   -st-extends: Tooltip;
   display: inline;
+  overflow: hidden;
+}
+
+.root::popoverElement {
+  max-width: 100%;
 }
