--- a/packages/wix-ui-core/src/components/Popover/Popover.st.css
+++ b/packages/wix-ui-core/src/components/Popover/Popover.st.css
@@ -108,3 +108,5 @@
   margin-bottom: value(contentArrowSize);
   border-color: value(contentBorderColor) transparent transparent transparent;
 }
+
+.popoverElement {}
